<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:layoutDirection="rtl"
    android:padding="16dp"
    tools:context=".view.ui.MainActivity">

    <View
        android:id="@+id/lockDatePickerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#88888888"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@id/datePicker"
        app:layout_constraintEnd_toEndOf="@id/datePicker"
        app:layout_constraintStart_toStartOf="@id/datePicker"
        app:layout_constraintTop_toTopOf="@id/datePicker" />

    <DatePicker
        android:id="@+id/datePicker"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="8dp"
        android:layout_marginStart="8dp"
        android:nestedScrollingEnabled="true"
        android:overScrollMode="always"
        app:layout_constraintBottom_toTopOf="@id/guideline4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline3"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/titleEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="24dp"
        android:hint="@string/AlarmNameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/guideline3"
        app:layout_constraintTop_toTopOf="@id/guideline4" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/playTimeTextView"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:minHeight="60dp"
        android:text="@string/play_time"
        app:layout_constraintEnd_toStartOf="@id/btn_add"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/guideline3"
        app:layout_constraintTop_toBottomOf="@id/titleEditText" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/set_alarm"
        android:src="@drawable/ic_add"
        app:backgroundTint="@color/color_primary"
        app:layout_constraintBottom_toBottomOf="@id/playTimeTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@id/playTimeTextView"
        app:layout_constraintTop_toBottomOf="@id/titleEditText" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_subtract"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/set_alarm"
        android:src="@drawable/ic_subtract"
        app:backgroundTint="@color/color_primary"
        app:layout_constraintEnd_toEndOf="@+id/btn_add"
        app:layout_constraintStart_toStartOf="@+id/btn_add"
        app:layout_constraintTop_toBottomOf="@+id/btn_add" />

    <CheckBox
        android:id="@+id/saturdayCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:checked="false"
        android:text="@string/saturday"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <CheckBox
        android:id="@+id/sundayCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:checked="false"
        android:text="@string/sunday"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/saturdayCheckBox" />

    <CheckBox
        android:id="@+id/mondayCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:checked="false"
        android:text="@string/monday"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sundayCheckBox" />

    <CheckBox
        android:id="@+id/tuesdayCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:checked="false"
        android:text="@string/tuesday"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/mondayCheckBox" />

    <CheckBox
        android:id="@+id/wednesdayCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:checked="false"
        android:text="@string/wednesday"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tuesdayCheckBox" />

    <CheckBox
        android:id="@+id/thursdayCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:checked="false"
        android:text="@string/thursday"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/wednesdayCheckBox" />

    <CheckBox
        android:id="@+id/fridayCheckBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:checked="false"
        android:text="@string/friday"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/thursdayCheckBox" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/repeatSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@id/repeatTextView"
        app:layout_constraintEnd_toStartOf="@id/guideline3"
        app:layout_constraintStart_toEndOf="@id/repeatTextView"
        app:layout_constraintTop_toTopOf="@id/repeatTextView" />

    <TextView
        android:id="@+id/repeatTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/repeat"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/fridayCheckBox" />

    <Button
        android:id="@+id/setAlarmButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/set_alarm"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>